Wrap up more classifying, fix widgets in the class, fix the styling of widgets to match the widgetized theme, and add WP-Pagenavi support.
git-svn-id: https://svn.chrismeller.com/cwm/branches/chris-mkii@75 9841916d-1f77-4d57-ab71-7f08b6dd89e2

--- a/style.css
+++ b/style.css
@@ -246,6 +246,8 @@ body {
 	
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
+	
+	margin-bottom: 1em;
 }
 
 h3.widget-title {
@@ -254,6 +256,12 @@ h3.widget-title {
 	
 	font-size: 1.2em;
 	margin-bottom: 0.5em;
+}
+
+#archives ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 #archives li {
